# tasse

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py
examples/hellopoetry/: pyproject.toml  task.py  task.yaml
examples/hellorequirements/: requirements.txt  task.py  task.yaml
examples/helloworld/: job.py  task.yaml
examples/helloworldcron/: task.py  task.yaml
