[tool.poetry]
name = "hellopoetry"
version = "0.1.0"
description = ""
authors = ["Mathieu Virbel <mat@meltingrocks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kivy = ">2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
